--- a/src/vkH/editor/imgui.ini
+++ b/src/vkH/editor/imgui.ini
@@ -32,20 +32,20 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Window][Main Render]
-Pos=8,27
-Size=711,765
+Pos=0,19
+Size=749,781
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][View]
-Pos=721,27
-Size=471,449
+Pos=751,19
+Size=449,458
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Toolbar]
-Pos=721,478
-Size=471,314
+Pos=751,479
+Size=449,321
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -54,10 +54,15 @@ Pos=0,0
 Size=1200,800
 Collapsed=0
 
+[Window][Model Transformation]
+Pos=60,60
+Size=392,106
+Collapsed=0
+
 [Docking][Data]
-DockSpace     ID=0x229CC25D Window=0xC28363E2 Pos=8,27 Size=1184,765 Split=X Selected=0x530C566C
-  DockNode    ID=0x00000001 Parent=0x229CC25D SizeRef=2071,765 CentralNode=1 Selected=0x5C49395D
-  DockNode    ID=0x00000008 Parent=0x229CC25D SizeRef=471,765 Split=Y Selected=0x530C566C
+DockSpace     ID=0x229CC25D Window=0xC28363E2 Pos=0,19 Size=1200,781 Split=X Selected=0x530C566C
+  DockNode    ID=0x00000001 Parent=0x229CC25D SizeRef=749,765 CentralNode=1 Selected=0x5C49395D
+  DockNode    ID=0x00000008 Parent=0x229CC25D SizeRef=449,765 Split=Y Selected=0x530C566C
     DockNode  ID=0x00000009 Parent=0x00000008 SizeRef=590,449 Selected=0x530C566C
     DockNode  ID=0x0000000A Parent=0x00000008 SizeRef=590,314 Selected=0x738351EE
 DockSpace     ID=0xA5DED464 Pos=27,18 Size=1184,765 Split=X
