--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ endif()
 
 set(FETCHCONTENT_BASE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/external)
 set(taskflow_src ${FETCHCONTENT_BASE_DIR}/cpp_taskflow-src)
+#set(json_src ${FETCHCONTENT_BASE_DIR}/json-src)
 
 include(FetchContent)
 
@@ -26,7 +27,10 @@ include_directories(
         saba/example
         external/cpp_taskflow-src
         nvpro_core
+        nativefiledialog/src/include
+        nativefiledialog/src
 
+        src/shaders/
         src/vkH
         src/vkM
 )
@@ -41,13 +45,6 @@ find_library(glfw_msvc glfw3 PATHS ${CMAKE_SOURCE_DIR}/lib/msvc)
 find_library(glfw_mingw glfw3 PATHS ${CMAKE_SOURCE_DIR}/lib/mingw)
 find_program(glsl glslc REQUIRED)
 
-#set(BASE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
-#include(${BASE_DIRECTORY}/nvpro_core/cmake/setup.cmake)
-#include(${BASE_DIRECTORY}/nvpro_core/cmake/utilities.cmake)
-#
-#_add_package_VulkanSDK()
-#_add_package_ImGUI()
-#_add_nvpro_core_lib()
 
 if (NOT EXISTS "${taskflow_src}")
     FetchContent_Declare(
@@ -60,11 +57,28 @@ if (NOT EXISTS "${taskflow_src}")
     FetchContent_MakeAvailable(cpp_taskflow)
 endif ()
 
+#if (NOT EXISTS "${json_src}")
+#    FetchContent_Declare(
+#            json
+#            GIT_REPOSITORY      https://github.com/nlohmann/json.git
+#            GIT_TAG             v3.11.3
+#            SOURCE_DIR     "${CMAKE_CURRENT_SOURCE_DIR}/external/"
+#    )
+#    FetchContent_MakeAvailable(json)
+#endif ()
+
 file(GLOB_RECURSE yic_srcs "src/*.h" "src/*.cpp" "pch/vkGlobal.cpp")
 file(GLOB_RECURSE vertex ${CMAKE_SOURCE_DIR}/src/shaders/*.vert)
 file(GLOB_RECURSE fragment ${CMAKE_SOURCE_DIR}/src/shaders/*.frag)
-file(GLOB_RECURSE ray ${CMAKE_SOURCE_DIR}/src/shaders/*.glsl)
+file(GLOB_RECURSE ray
+        ${CMAKE_SOURCE_DIR}/src/shaders/*.rgen
+        ${CMAKE_SOURCE_DIR}/src/shaders/*.rchit
+        ${CMAKE_SOURCE_DIR}/src/shaders/*.rmiss
+        #${CMAKE_SOURCE_DIR}/src/shaders/*.rgen
+)
 file(GLOB_RECURSE pch_files "pch/*.h" )
+
+file(GLOB_RECURSE vot "src/shaders/vot/*.h" "src/shaders/vot/*.cpp")
 
 foreach (vert_shader ${vertex})
     get_filename_component(shader_name ${vert_shader} NAME_WE)
@@ -78,33 +92,33 @@ endforeach ()
 
 foreach (ray_shader ${ray})
     get_filename_component(shader_name ${ray_shader} NAME_WE)
-    execute_process(COMMAND ${glsl} ${ray_shader} -o ${CMAKE_CURRENT_BINARY_DIR}/${shader_name}.spv)
+    execute_process(COMMAND ${glsl} ${ray_shader} --target-env=vulkan1.3 -o ${CMAKE_CURRENT_BINARY_DIR}/${shader_name}.spv)
 endforeach ()
 
 add_executable(vulkan main.cpp ${yic_srcs})
 add_executable(vkMMD vkMMD.cpp ${yic_srcs})
+add_executable(glsl_generator glsl_generator.cpp ${vot})
 
 target_precompile_headers(vulkan PRIVATE ${pch_files})
 target_precompile_headers(vkMMD PRIVATE ${pch_files})
 
 if(MSVC)
-    target_link_libraries(vulkan ${glfw_msvc} "Vulkan::Vulkan" "imgui" "Saba" )
+    target_link_libraries(vulkan ${glfw_msvc} "Vulkan::Vulkan" "imgui" "Saba" "nfd")
     target_include_directories(vulkan PRIVATE ${CMAKE_BINARY_DIR})
     target_include_directories(vulkan PRIVATE external/spdlog)
     target_include_directories(vulkan PRIVATE taskflow)
     target_include_directories(vulkan PRIVATE nvpro_core)
 
-    target_link_libraries(vkMMD ${glfw_msvc} "Vulkan::Vulkan" "Saba" "imgui")
+    target_link_libraries(vkMMD ${glfw_msvc} "Vulkan::Vulkan" "Saba" "imgui" "nfd")
 elseif (MINGW)
-    target_link_libraries(vulkan ${glfw_mingw} "Vulkan::Vulkan" "imgui" "Saba")
- #   target_link_libraries(vulkan ${glfw_mingw} "Vulkan::Vulkan" "imgui" "Saba" "nvpro_core")
+    target_link_libraries(vulkan ${glfw_mingw} "Vulkan::Vulkan" "imgui" "Saba" "nfd")
     target_include_directories(vulkan PRIVATE ${CMAKE_BINARY_DIR})
     target_include_directories(vulkan PRIVATE external/spdlog)
     target_include_directories(vulkan PRIVATE taskflow)
     target_include_directories(vulkan PRIVATE nvpro_core)
 
 
-    target_link_libraries(vkMMD ${glfw_mingw} "Vulkan::Vulkan" "Saba" "imgui")
+    target_link_libraries(vkMMD ${glfw_mingw} "Vulkan::Vulkan" "Saba" "imgui" "nfd")
     target_include_directories(vkMMD PRIVATE external/spdlog)
 else ()
     message(FATAL_ERROR "unsupported compiler")
@@ -112,16 +126,25 @@ endif ()
 
 file(INSTALL saba/viewer/Saba/Viewer/resource DESTINATION ${CMAKE_BINARY_DIR})
 
-#if (NOT TARGET imgui)
 add_subdirectory(imgui)
-#endif ()
-
+add_subdirectory(nativefiledialog)
 
 if (NOT TARGET saba)
     add_subdirectory(saba)
 endif ()
 
 
+
+
+
+
+#set(BASE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
+#include(${BASE_DIRECTORY}/nvpro_core/cmake/setup.cmake)
+#include(${BASE_DIRECTORY}/nvpro_core/cmake/utilities.cmake)
+#
+#_add_package_VulkanSDK()
+#_add_package_ImGUI()
+#_add_nvpro_core_lib()
 
 
 
